src/tests/ci/assignment_6_advanced_features/valid/12_union_typedef_alias.c
union Value {
    int i;
    char c;
    float f;
};

typedef union Value Value;

int main() {
    Value v;
    v.i = 9;
    return v.i;
}