src/tests/ci/assignment_6_advanced_features/invalid_semantic/11_union_missing_member_type_check.c
union Value {
    int i;
    char c;
};

int main() {
    union Value v;

    v.missing = 5;

    return 0;
}